ingress/blue.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blue
  labels:
    app: blue-green
    colour: green
spec:
  containers:
  - name: blue
    image: docker.io/mtinside/blue-green:blue
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 8080
  selector:
    app: blue-green
    colour: blue
