ingress/green.yaml
apiVersion: v1
kind: Pod
metadata:
  name: green
  labels:
    app: blue-green
    colour: green
spec:
  containers:
  - name: green
    image: docker.io/mtinside/blue-green:green
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  #type: ClusterIP
  type: NodePort
  ports:
   - port: 80
     targetPort: 8080
  selector:
    app: blue-green
    colour: green
